# Kouei

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.web  IMPROVEMENTS.md  README.md  USER_MANUAL.md  config.json  dear_llm.md  deploy.sh  docker-compose.yml  kouei-api.service  kouei-web.service  pyproject.toml  requirements.txt  test_all.py  verify_async.py  verify_ensemble.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py  verify_phase8.py  verify_upgrades.py
.github/workflows/: ci.yml
backups/: race_data_20251230_193804.db
backups/models_20251230_193321/: lgbm_model.txt
backups/models_20251230_200500/: model.onnx
config/: model_params.json  strategies.json
data/: accuracy.db  backtest_history.json  drift_history.json  racer_course_stats.json
data/html_cache/: www.google.com.html
data/odds_history/: TEST_20250130_01_01.json  TEST_RACE_001.json
data/processed/: race_data.csv  race_data.parquet
data/raw_samples/: beforeinfo_20241228_02_1.html  schedule_20241201.html
infrastructure/: main.tf
models/: baseline_stats.json  cat_model.cbm  ensemble_weights.json  lgbm_model.txt  lgbm_model_v2.txt  rl_qtable.json  vector_index.joblib  venue_stats.json  xgb_model.json
scripts/: collect_and_train.sh
src/analysis/: compatibility_matrix.py  racer_tracker.py  vector_db_manager.py  vector_search.py  venue_scoring.py  weather_predictor.py
src/api/: dependencies.py  enhanced_api.py  main_api.py  main_api_new.py
src/auth/: jwt_handler.py
src/cache/: feature_cache.py  redis_client.py
tests/: chaos_test.py  conftest.py  test_api.py  test_api_routers.py  test_betting.py  test_core.py  test_features.py  test_new_features.py
tools/: backup.py  changelog_gen.py  convert_to_parquet.py  migrate_db.py
web-ui/: index.html  package-lock.json  package.json
(+5036 files in other folders)
